# matgen

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  INTEGRATION.md  LICENSE  README.md
include/matgen/algorithms/: matrix_scale.h  scaling.h
include/matgen/algorithms/scaling/: bilinear_omp.h  scaling_types.h
include/matgen/core/: conversion.h  coo_matrix.h  csr_matrix.h  matrix_ops.h  types.h
include/matgen/generators/: random.h
include/matgen/io/: matrix_io.h  mtx_common.h  mtx_reader.h  mtx_writer.h
include/matgen/math/: constants.h  distance.h  sparse_vector.h  spmv.h  vector_ops.h
include/matgen/util/: argparse.h  log.h  matrix_convert.h  matrix_generate.h
include/matgen/utils/: accumulator.h  argparse.h  triplet_buffer.h
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt
src/algorithms/cuda/: CMakeLists.txt
src/algorithms/mpi/: CMakeLists.txt  mpi_utils.c  mpi_utils.h  scale_bilinear.c  scale_mpi.c  scale_mpi.h  scale_nearest.c
src/algorithms/omp/: CMakeLists.txt  omp_utils.c  omp_utils.h  scale_bilinear.c  scale_nearest.c  scale_omp.c  scale_omp.h
src/algorithms/scaling/: CMakeLists.txt  bilinear.c  bilinear_dispatch.c  bilinear_omp.c  fft_dispatch.c  lanczos_dispatch.c  nearest_neighbor.c  nearest_neighbor_dispatch.c  nearest_neighbor_omp.c  wavelet_dispatch.c
src/backends/cuda/algorithms/scaling/: CMakeLists.txt  bilinear_cuda.cu  fft_cuda.cu  lanczos_cuda.cu  wavelet_cuda.cu
src/backends/cuda/core/matrix/: CMakeLists.txt  coo_cuda.cu  csr_builder_cuda.cu
src/backends/cuda/internal/: csr_builder_cuda.h  fft_cuda.cuh  lanczos_cuda.cuh  wavelet_cuda.cuh
src/backends/mpi/: CMakeLists.txt
src/backends/mpi/algorithms/: CMakeLists.txt
src/backends/mpi/algorithms/scaling/: CMakeLists.txt  bilinear_mpi.c  nearest_neighbor_mpi.c
src/backends/mpi/core/: CMakeLists.txt
src/backends/mpi/core/matrix/: CMakeLists.txt  conversion_mpi.c  coo_mpi.c  csr_builder_mpi.c  csr_mpi.c
src/backends/mpi/internal/: bilinear_mpi.h  conversion_mpi.h  coo_mpi.h  csr_builder_mpi.h  csr_mpi.h  nearest_neighbor_mpi.h
src/backends/omp/algorithms/scaling/: bilinear_omp.c  nearest_neighbor_omp.c
src/backends/omp/core/matrix/: csr_builder_omp.c
src/backends/seq/algorithms/scaling/: CMakeLists.txt  bilinear_seq.c  fft_seq.c  lanczos_seq.c  nearest_neighbor_seq.c  wavelet_seq.c
src/backends/seq/internal/: fft_seq.h  lanczos_seq.h  wavelet_seq.h
src/core/: CMakeLists.txt  conversion.c  coo_matrix.c  csr_matrix.c  matrix_ops.c
src/core/matrix/: conversion_dispatch.c  coo_dispatch.c  csr_builder_dispatch.c  csr_builder_internal.h  csr_dispatch.c
src/generators/: CMakeLists.txt  random.c
src/io/: CMakeLists.txt  matrix_io.c  mtx_reader.c  mtx_writer.c
src/math/: CMakeLists.txt  distance.c  matrix_ops.c  sparse_vector.c  spmv.c  vector_ops.c
src/parallel/: CMakeLists.txt
src/parallel/cuda/: CMakeLists.txt
src/parallel/openmp/: CMakeLists.txt
src/util/: CMakeLists.txt  argparse.c  log.c  matrix_convert.c  matrix_generate.c
src/utils/: CMakeLists.txt  accumulator.c  argparse.c  log.c  triplet_buffer.c
testbed/: matrix_analysis.py  scale_cli.c
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
tests/src/algorithms/scaling/: CMakeLists.txt  bilinear_test.cpp  nearest_neighbor_test.cpp
tests/src/core/: CMakeLists.txt  conversion_test.cpp  coo_matrix_test.cpp  csr_matrix_test.cpp  matrix_ops_test.cpp  types_test.cpp
tests/src/generators/: CMakeLists.txt  random_test.cpp
tests/src/io/: CMakeLists.txt  matrix_io_test.cpp  mtx_io_test.cpp
tests/src/math/: CMakeLists.txt  distance_test.cpp  matrix_ops_test.cpp  sparse_vector_test.cpp  spmv_test.cpp  vector_ops_test.cpp
tests/src/util/: CMakeLists.txt  accumulator_test.cpp  argparse_test.cpp  log_test.cpp  matrix_convert_test.cpp  matrix_generate_test.cpp
tests/src/utils/: CMakeLists.txt  accumulator_test.cpp  argparse_test.cpp  log_test.cpp  triplet_buffer_test.cpp
